--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <p>No meu tempo livre sou um fanático por esportes, de tudo um pouco mas principalmente futebol, onde infelizmente escolhi ser <span>Athleticano</span>.</p>
         </div>
 
-        <img src="img/logo-atletico-paranaense-1024.png" alt="Logo Athletico" /></a>
-
+<a href="https://logodetimes.com" target="_blank"><img src="https://logodetimes.com/times/atletico-paranaense/logo-atletico-paranaense-512.png" /></a>
         <div class="ap" id="profissional">
             <h2>Vida profissional</h2>
             <p>Enquanto a minha carreira profissional, atualmente sou um colaborador da empresa <a href="https://footure.com.br" target="_blank"><b>Footure</b></a>, onde levamos tecnologia e inovação para clubes de futebol do mundo todo.</p>
